justdo-bootstrap-web-app-themes: Fixed visibility for back arrow button in Account Preference #10391

--- a/justdo-bootstrap-web-app-themes/solid-dark/bootstrap.css
+++ b/justdo-bootstrap-web-app-themes/solid-dark/bootstrap.css
@@ -7113,6 +7113,11 @@ a.text-dark:hover, a.text-dark:focus {
   transform: scale(1) !important;
 }
 
+.navbar .return-arrow .jd-icon,
+.navbar .return-arrow .jd-icon:hover {
+  stroke: black !important;
+}
+
 .jd-priority-slider-handle {
   box-shadow: none !important;
 }
